# gramps

./: configure.in
gep-0065_Using_Setup/: MANIFEST.in  create_debian_package.py  setup.py  setup2.cfg
gep-0065_Using_Setup/po/: i18n_create_lang_file.sh  i18n_generate_pot.py  i18n_po_to_mo.py  i18n_pot_to_updated_po.py
gep-013-server/src/: ExportAssistant.py  Utils.py  const.py.in
gep-013-server/src/DataViews/: PedigreeView.py
gep-013-server/src/Simple/: _SimpleAccess.py
gep-013-server/src/cli/: client.py  grampscli.py  server.py
gep-013-server/src/glade/: columnorder.glade
gep-013-server/src/plugins/export/: ExportDjango.py  ExportSql.py
gep-013-server/src/plugins/import/: ImportDjango.py
gep-013-server/webapp/nonni/: Makefile  README  __init__.py  settings.py  urls.py
gep-013-server/webapp/nonni/nonna/: admin.py  models.py
gep-025-name/: README  configure.in
gep-025-name/src/: Makefile.am
gep-025-name/src/maps/: Makefile.am  __init__.py  constants.py  geography.py  grampsmaps.py
gep-025-name/src/plugins/lib/: Makefile.am
gep-025-name/src/plugins/view/: geoevents.py  geofamily.py  geography.gpr.py  geoperson.py  geoplaces.py  geoview.py
gep-026-replace-make/: MANIFEST.in  README  classifiers.py  create_setup_cfg.py  gramps.sh  pysetup  setup.cfg  setup.py  setup_custom.py  xx_distutils.py
gep-026-replace-make/gramps/plugins/lib/maps/: datelayer.py
gep-026-replace-make/gramps/plugins/view/: geomoves.py
gep-026-replace-make/gramps/webapp/: Makefile  setup.cfg
gep-026-replace-make/po/: POTFILES.in  POTFILES.skip  check_po  determine_po_status.py
gep-029-gtk3/po/: gramps.pot
gep-42-Using-Python-DistUtils/: MANIFEST.in  Makefile.am  aclocal.m4  autogen.sh  configure.in  gramps-autogen.sh  setup.cfg  setup.py
gep-42-Using-Python-DistUtils/data/: Makefile.am
gep-42-Using-Python-DistUtils/data/web/: Makefile.am
gep-42-Using-Python-DistUtils/data/web/css/: Makefile.am
gep-42-Using-Python-DistUtils/data/web/images/: Makefile.am
gep-42-Using-Python-DistUtils/data/web/javascript/: Makefile.am
gep-42-Using-Python-DistUtils/gramps/: Makefile.am  __init__.py  const.py.in
gep-42-Using-Python-DistUtils/gramps/images/: Makefile.am
gep-42-Using-Python-DistUtils/gramps/plugins/lib/maps/: lifewaylayer.py  osmGps.py  placeselection.py
gep-42-Using-Python-DistUtils/gramps/plugins/view/: geoclose.py
gep-42-Using-Python-DistUtils/gramps/plugins/webstuff/: Makefile.am  webstuff.py
gep-42-Using-Python-DistUtils/m4/: Makefile
gep27-DistUtils/: MANIFEST.in  Makefile.am  configure.in  create_setup_cfg.py  setup.cfg  setup.py
gramps31/src/plugins/rel/: Makefile.am
gramps32/src/glade/: editattribute.glade
gramps34/mac/: gramps.bundle  gramps.modules
gramps34/po/: nb.po
po/: gramps.pot
src/data/: Makefile.am
