[metadata]
name = gramps
version = 3.5.0
summary = Gramps (Genealogical Research and Analysis Management Programming System)
description = Gramps (Genealogical Research and Analysis Management Programming System) is a GNOME based genealogy program supporting a Python based plugin system.
Home-page = http://gramps-project.org
download-url = http://gramps-project.org/download/
author = Donald N. Allingham
author-email = don@gramps-project.org
maintainer = Gramps Development Team
maintainer-email = benny.malengier@gmail.com
license = GPL v2 or greater
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Plugins
    Environment :: Web Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: GTK
    Framework :: Django
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: Bulgarian
    Natural Language :: Catalan
    Natural Language :: Chinese (Simplified)
    Natural Language :: Croatian
    Natural Language :: Czech
    Natural Language :: Danish
    Natural Language :: Dutch
    Natural Language :: English
    Natural Language :: Esperanto
    Natural Language :: Finnish
    Natural Language :: French
    Natural Language :: German
    Natural Language :: Hebrew
    Natural Language :: Hungarian
    Natural Language :: Italian
    Natural Language :: Japanese
    Natural Language :: Norwegian
    Natural Language :: Polish
    Natural Language :: Portuguese
    Natural Language :: Portuguese (Brazilian)
    Natural Language :: Russian
    Natural Language :: Slovak
    Natural Language :: Slovenian
    Natural Language :: Spanish
    Natural Language :: Swedish
    Natural Language :: Ukranian
    Natural Language :: Vietnamese
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Other OS
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Desktop Environment :: Gnome
    Topic :: Education
    Topic :: Multimedia
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Sociology :: Genealogy

platforms =
    FreeBSD
    Linux
    MacOS
    Windows
keywords =
    Ancestry
    Birth
    Death
    Family
    Family-tree
    GEDCOM
    Genealogy
    Marriage
    Pedigree
requires-Python: >= 2.6.0
requires-dist =
    distutils2
    librsvg2
    osm-gps-map >= 0.7.3
    pyexiv2 >= 0.3.0
    pygtk2 >= 2.0
    python-osmgpsmap >= 0.7.3
obsoletes-dist =
    gramps < 3.5.0
Requires-External: exiv2-devel (>=0.22)
project-url:
       Bug Tracker, http://bugs.gramps-project.org/
       Documentation, http://www.gramps-project.org/wiki/index.php?title=Main_page
       Downloads, http://gramps-project.org/download/

[files]
packages =
    gramps
    gramps.DateHandler
    gramps.Filters
    gramps.Filters.Rules
    gramps.Filters.Rules.Citation
    gramps.Filters.Rules.Event
    gramps.Filters.Rules.Family
    gramps.Filters.Rules.MediaObject
    gramps.Filters.Rules.Note
    gramps.Filters.Rules.Person
    gramps.Filters.Rules.Place
    gramps.Filters.Rules.Repository
    gramps.Filters.Rules.Source
    gramps.Filters.SideBar
    gramps.GrampsLocale
    gramps.GrampsLogger
    gramps.Merge
    gramps.Simple
    gramps.cli
    gramps.cli.plug
    gramps.docgen
    gramps.gen
    gramps.gen.db
    gramps.gen.display
    gramps.gen.lib
    gramps.gen.mime
    gramps.gen.plug
    gramps.gen.plug.docbackend
    gramps.gen.plug.docgen
    gramps.gen.plug.menu
    gramps.gen.plug.report
    gramps.gen.proxy
    gramps.gen.utils
    gramps.gui
    gramps.gui.editors
    gramps.gui.editors.displaytabs
    gramps.gui.plug
    gramps.gui.plug.report
    gramps.gui.selectors
    gramps.gui.views
    gramps.gui.views.treemodels
    gramps.gui.widgets
scripts =
    gramps.sh
resources =
    build/data/ gramps.desktop = {data}/local/share/applications
    build/data/ gramps.xml = {data}/local/share/mime/packages
    build/data/ gramps.keys = {data}/local/share/mime-info
    data/ gramps.mime = {data}/local/share/mime-info
    data/ *.png = {data}/local/share/icons/gnome/48x48/mimetypes
    data/ *.svg = {data}/local/share/icons/gnome/scalable/mimetypes
    gramps/images/ gramps.png = {data}/local/share/icons
    build/data/man/ gramps.1 = {dat}/local/share/man/man1
    build/data/man/cs/ gramps.1 = {data}/local/share/man/cs/man1
    build/data/man/fr/ gramps.1.gz = {data}/local/share/man/fr/man1
    build/data/man/nl/ gramps.1 = {data}/local/share/man/nl/man1
    build/data/man/pl/ gramps.1 = {data}/local/share/man/pl/man1
    build/data/man/sv/ gramps.1 = {data}/local/share/man/sv/man1
    example/**/*.* = {doc}
    AUTHORS = {doc}
    COPYING = {doc}
    FAQ = {doc}
    INSTALL = {doc}
    LICENSE = {doc}
    NEWS = {doc}
    README = {doc}
    TODO = {doc}
    TestPlan.txt = {doc}
    create_setup_cfg.py = {purelib}
    setup.cfg = {purelib}
    setup.py = {purelib}
    setup_custom.py = {purelib}
    build/mo/bg/ gramps.mo = {data}/local/share/locale/bg/LC_MESSAGES/gramps.mo
    build/mo/uk/ gramps.mo = {data}/local/share/locale/uk/LC_MESSAGES/gramps.mo
    build/mo/es/ gramps.mo = {data}/local/share/locale/es/LC_MESSAGES/gramps.mo
    build/mo/tr/ gramps.mo = {data}/local/share/locale/tr/LC_MESSAGES/gramps.mo
    build/mo/ga/ gramps.mo = {data}/local/share/locale/ga/LC_MESSAGES/gramps.mo
    build/mo/da/ gramps.mo = {data}/local/share/locale/da/LC_MESSAGES/gramps.mo
    build/mo/hu/ gramps.mo = {data}/local/share/locale/hu/LC_MESSAGES/gramps.mo
    build/mo/nb/ gramps.mo = {data}/local/share/locale/nb/LC_MESSAGES/gramps.mo
    build/mo/eo/ gramps.mo = {data}/local/share/locale/eo/LC_MESSAGES/gramps.mo
    build/mo/ro/ gramps.mo = {data}/local/share/locale/ro/LC_MESSAGES/gramps.mo
    build/mo/pl/ gramps.mo = {data}/local/share/locale/pl/LC_MESSAGES/gramps.mo
    build/mo/cs/ gramps.mo = {data}/local/share/locale/cs/LC_MESSAGES/gramps.mo
    build/mo/sr/ gramps.mo = {data}/local/share/locale/sr/LC_MESSAGES/gramps.mo
    build/mo/ca/ gramps.mo = {data}/local/share/locale/ca/LC_MESSAGES/gramps.mo
    build/mo/hr/ gramps.mo = {data}/local/share/locale/hr/LC_MESSAGES/gramps.mo
    build/mo/ru/ gramps.mo = {data}/local/share/locale/ru/LC_MESSAGES/gramps.mo
    build/mo/sk/ gramps.mo = {data}/local/share/locale/sk/LC_MESSAGES/gramps.mo
    build/mo/nl/ gramps.mo = {data}/local/share/locale/nl/LC_MESSAGES/gramps.mo
    build/mo/fr/ gramps.mo = {data}/local/share/locale/fr/LC_MESSAGES/gramps.mo
    build/mo/de/ gramps.mo = {data}/local/share/locale/de/LC_MESSAGES/gramps.mo
    build/mo/lt/ gramps.mo = {data}/local/share/locale/lt/LC_MESSAGES/gramps.mo
    build/mo/zh_CN/ gramps.mo = {data}/local/share/locale/zh_CN/LC_MESSAGES/gramps.mo
    build/mo/pt_PT/ gramps.mo = {data}/local/share/locale/pt_PT/LC_MESSAGES/gramps.mo
    build/mo/sq/ gramps.mo = {data}/local/share/locale/sq/LC_MESSAGES/gramps.mo
    build/mo/ar/ gramps.mo = {data}/local/share/locale/ar/LC_MESSAGES/gramps.mo
    build/mo/ja/ gramps.mo = {data}/local/share/locale/ja/LC_MESSAGES/gramps.mo
    build/mo/sv/ gramps.mo = {data}/local/share/locale/sv/LC_MESSAGES/gramps.mo
    build/mo/sl/ gramps.mo = {data}/local/share/locale/sl/LC_MESSAGES/gramps.mo
    build/mo/br/ gramps.mo = {data}/local/share/locale/br/LC_MESSAGES/gramps.mo
    build/mo/fi/ gramps.mo = {data}/local/share/locale/fi/LC_MESSAGES/gramps.mo
    build/mo/pt_BR/ gramps.mo = {data}/local/share/locale/pt_BR/LC_MESSAGES/gramps.mo
    build/mo/it/ gramps.mo = {data}/local/share/locale/it/LC_MESSAGES/gramps.mo
    build/mo/nn/ gramps.mo = {data}/local/share/locale/nn/LC_MESSAGES/gramps.mo
    build/mo/mk/ gramps.mo = {data}/local/share/locale/mk/LC_MESSAGES/gramps.mo
    build/mo/he/ gramps.mo = {data}/local/share/locale/he/LC_MESSAGES/gramps.mo
    build/mo/vi/ gramps.mo = {data}/local/share/locale/vi/LC_MESSAGES/gramps.mo
extra_files =
    debian/*
    docs/*
    docs/gen/*
    docs/corecli/*
    docs/coregui/*
    help/*
    mac/*
    test/*
    test/GrampsDb/*
    test/GrampsLogger/*
    test/RelLib/*
    windows/*
    windows/builder/*
    windows/nsis/*
    gramps/test/*
    gramps/test/test/*
package_data =
    gramps = 
        data/*.*
        data/templates/*.*
        data/templates/registration/*.*
        glade/*.*
        glade/catalog/*.*
        images/*.*
        images/16x16/*.*
        images/22x22/*.*
        images/48x48/*.*
        images/scalable/*.*
        images/16x16/source/*.*
        plugins/*.*
        plugins/docgen/*.*
        plugins/drawreport/*.*
        plugins/sidebar/*.*
        plugins/view/*.*
        plugins/webstuff/*.*
        plugins/tool/*.*
        plugins/import/*.*
        plugins/graph/*.*
        plugins/quickview/*.*
        plugins/export/*.*
        plugins/rel/*.*
        plugins/textreport/*.*
        plugins/gramplet/*.*
        plugins/webreport/*.*
        plugins/mapservices/*.*
        plugins/lib/*.*
        plugins/webstuff/css/*.*
        plugins/webstuff/javascript/*.*
        plugins/webstuff/images/*.*
        plugins/import/test/*.*
        plugins/export/test/*.*
        plugins/lib/maps/*.*
        plugins/webstuff/css/swanky-purse/*.*
        plugins/webstuff/css/swanky-purse/images/*.*

