[metadata]
name = gramps
version = 3.5.0
summary = Gramps (Genealogical Research and Analysis Management Programming System)
description = Gramps (Genealogical Research and Analysis Management Programming System) is a GNOME based genealogy program supporting a Python based plugin system.
Home-page = http://gramps-project.org
download-url = http://gramps-project.org/download/
author = Donald N. Allingham
author-email = don@gramps-project.org
maintainer = Gramps Development Team
maintainer-email = benny.malengier@gmail.com
license = GPL v2 or greater
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Plugins
    Environment :: Web Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: GTK
    Framework :: Django
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: Bulgarian
    Natural Language :: Catalan
    Natural Language :: Chinese (Simplified)
    Natural Language :: Croatian
    Natural Language :: Czech
    Natural Language :: Danish
    Natural Language :: Dutch
    Natural Language :: English
    Natural Language :: Esperanto
    Natural Language :: Finnish
    Natural Language :: French
    Natural Language :: German
    Natural Language :: Hebrew
    Natural Language :: Hungarian
    Natural Language :: Italian
    Natural Language :: Japanese
    Natural Language :: Norwegian
    Natural Language :: Polish
    Natural Language :: Portuguese (Brazilian)
    Natural Language :: Portuguese
    Natural Language :: Russian
    Natural Language :: Slovak
    Natural Language :: Slovenian
    Natural Language :: Spanish
    Natural Language :: Swedish
    Natural Language :: Ukranian
    Natural Language :: Vietnamese
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Other OS
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Desktop Environment :: Gnome
    Topic :: Education
    Topic :: Multimedia
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Sociology :: Genealogy
platforms =
    FreeBSD
    Linux
    MacOS
    Windows
keywords =
    Ancestry
    Birth
    Death
    Family
    Family-tree
    GEDCOM
    Genealogy
    Marriage
    Pedigree
requires-Python: >= 2.6.0
requires-dist =
    distutils2
    librsvg2
    osm-gps-map >= 0.7.3
    pyexiv2 >= 0.3.0
    pygtk2 >= 2.0
    python-osmgpsmap >= 0.7.3
obsoletes-dist =
    gramps < 3.5.0
Requires-External: exiv2-devel (>=0.22)
project-url:
       Bug Tracker, http://bugs.gramps-project.org/
       Documentation, http://www.gramps-project.org/wiki/index.php?title=Main_page
       Downloads, http://gramps-project.org/download/

[files]
packages =
    gramps
    gramps.DateHandler
    gramps.Filters
    gramps.Filters.Rules
    gramps.Filters.Rules.Citation
    gramps.Filters.Rules.Event
    gramps.Filters.Rules.Family
    gramps.Filters.Rules.MediaObject
    gramps.Filters.Rules.Note
    gramps.Filters.Rules.Person
    gramps.Filters.Rules.Place
    gramps.Filters.Rules.Repository
    gramps.Filters.Rules.Source
    gramps.Filters.SideBar
    gramps.GrampsLocale
    gramps.GrampsLogger
    gramps.Merge
    gramps.Simple
    gramps.cli
    gramps.cli.plug
    gramps.docgen
    gramps.gen
    gramps.gen.db
    gramps.gen.display
    gramps.gen.lib
    gramps.gen.mime
    gramps.gen.plug
    gramps.gen.plug.docbackend
    gramps.gen.plug.docgen
    gramps.gen.plug.menu
    gramps.gen.plug.report
    gramps.gen.proxy
    gramps.gen.utils
    gramps.gui
    gramps.gui.editors
    gramps.gui.editors.displaytabs
    gramps.gui.plug
    gramps.gui.plug.report
    gramps.gui.selectors
    gramps.gui.views
    gramps.gui.views.treemodels
    gramps.gui.widgets
package_data =
    gramps =
        data/*.xml
        data/templates/*.*
        data/templates/registration/*.*
        glade/*.glade
        images/*.*
        images/*/*.*
        plugins/*.*
        plugins/docgen/*.*
        plugins/drawreport/*.*
        plugins/export/*.*
        plugins/gramplet/*.*
        plugins/graph/*.*
        plugins/import/*.*
        plugins/lib/*.py
        plugins/lib/maps/*.*
        plugins/mapservices/*.*
        plugins/quickview/*.*
        plugins/rel/*.*
        plugins/sidebar/*.*
        plugins/textreport/*.*
        plugins/tool/*.*
        plugins/view/*.*
        plugins/webreport/*.*
        plugins/webstuff/*.*
        plugins/webstuff/css/*.*
        plugins/webstuff/css/swanky-purse/*.*
        plugins/webstuff/css/swanky-purse/images/*.*
        plugins/webstuff/images/*.*
        plugins/webstuff/javascript/*.*
extra_files =
    RELEASE_NOTES
    setup_custom.py
    TestPlan.txt
    data/*
    data/man/*.in
    data/man/*.rst
    data/man/*/*.in
    debian/*
    docs/*
    docs/*/*
    gramps/const.py.in
    gramps/data/tips.xml.in
    gramps/gen/*/test/*
    gramps/glade/catalog/*
    gramps/guiQML/*
    gramps/guiQML/*/*
    gramps/images/16x16/source/*
    gramps/Merge/test/*
    gramps/plugins/export/test/*
    gramps/plugins/import/test/*
    gramps/plugins/lib/holidays.xml.in
    gramps/test/*
    gramps/test/test/*
    gramps/webapp/*
    gramps/webapp/grampsdb/*
    gramps/webapp/grampsdb/*/*
    help/*
    mac/*
    po/*
    po/test/*
    test/*
    test/*/*
    windows/*
    windows/*/*
scripts =
    gramps.sh
resources =
    data/ gramps.mime = {datadir}/mime-info
    data/ *.png = {datadir}/icons/gnome/48x48/mimetypes
    data/ *.svg = {datadir}/icons/gnome/scalable/mimetypes
    gramps/images/ gramps.png = {icon}
    example/*/* = {doc}
    AUTHORS = {doc}
    COPYING = {doc}
    FAQ = {doc}
    INSTALL = {doc}
    LICENSE = {doc}
    NEWS = {doc}
    README = {doc}
    TODO = {doc}
X-merge-d = 
    data/gramps.desktop = {datadir}/applications/gramps.desktop
X-merge-k = 
    data/gramps.keys = {datadir}/mime-info/gramps.keys
X-merge-x = 
    data/gramps.xml = {datadir}/mime/packages/gramps.xml
    gramps/data/tips.xml = {purelib}/gramps/data/tips.xml
    gramps/plugins/lib/holidays.xml = {purelib}/gramps/plugins/lib/holidays.xml

[global]
setup_hooks = setup_custom.customize_config

[bdist_rpm]
requires = python >= 2.6
        exiv2-devel >= 0.22
        pyexiv2 >= 0.3
        gtk2 >= 2.24
        pygtk2 >= 2.24
        librsvg2 >= 2.34
        osm-gps-map >= 0.7
        python-osmgpsmap >= 0.7
packager = Gramps Development Team <benny.malengier@gmail.com>
doc_files = AUTHORS
        COPYING
        FAQ
        INSTALL
        LICENSE
        NEWS
        README
        RELEASE_NOTES
        TODO

[sdist]
formats = gztar
        bztar
#manifest-builders = setup_custom.manifest_builder

[build]
pre-hook.trans = setup_custom.build_trans
pre-hook.man = setup_custom.build_man
pre-hook.intl = setup_custom.build_intl

[install_dist]
pre-hook.template = setup_custom.install_template
