dnl $Id$

dnl Process this file with autoconf to produce a configure script.
dnl May need to run automake && aclocal first

AC_PREREQ(2.57)
dnl NOTE: arg to macro below becomes the "VERSION"
AC_INIT(gramps, 3.4.0, [gramps-bugs@lists.sourceforge.net])
AC_CONFIG_SRCDIR(configure.in)
AM_INIT_AUTOMAKE([1.6.3 foreign])

AC_CONFIG_MACRO_DIR([m4])

RELEASE=0.SVN$(svnversion -n .)
dnl RELEASE=0beta
dnl RELEASE=0rc1
dnl RELEASE=1

VERSIONSTRING=$VERSION
if test x"$RELEASE" != "x"
then
  VERSIONSTRING="$VERSION-$RELEASE"
fi

dnl put the ACLOCAL flags in the Makefile
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_PROG_INTLTOOL

AM_SHARED_MIME
AM_PACKAGER
AC_SUBST(RELEASE)
AC_SUBST(VERSIONSTRING)

dnl Add the languages which your application supports here.
ALL_LINGUAS="hu zh_CN cs da de es fr it nb nl nn pl pt_BR pt_PT ru sv fi lt sk bg hr sl ca sq he uk ja vi"
GETTEXT_PACKAGE=gramps
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Define to the Gettext package name.])
AM_GLIB_GNU_GETTEXT

dnl Checks for programs.  
dnl We first only check for python >= 2.6

AM_PATH_PYTHON(2.6)
AC_PATH_PROG(BINSH, sh)

pygtk_require="
try:
    import pygtk
    pygtk.require('2.0')
except ImportError:
    pass

def out(line):
    f = open('conftest.out', 'w')
    f.write(line)
    f.close()
"

AC_MSG_CHECKING(Python bindings for gtk 2.10 (pygtk2>=2.10.0))
cat > conftest.py <<EOF
$pygtk_require
try:
    import gobject
    version = gobject.pygtk_version
    if version >= (2,10,0):
        print_version = '.'.join([[str(i) for i in version]])
        out(print_version)
    else:
        out("NO")
except ImportError:
    out("NO")
except AttributeError:
    out("NO")
EOF
$PYTHON conftest.py
has_pygtk=`cat conftest.out`
rm -f conftest.out conftest.py
if test NO = "$has_pygtk"
then
   AC_MSG_ERROR([

**** The python bindings for gtk 2.10 (pygtk2>=2.10.0) could not be found.])
fi
AC_MSG_RESULT($has_pygtk)

AC_CONFIG_FILES([
data/Makefile
data/man/cs/Makefile
data/man/fr/Makefile
data/man/Makefile
data/man/nl/Makefile
data/man/pl/Makefile
data/man/sv/Makefile
example/gramps/Makefile
example/Makefile
gramps.sh
gramps/cli/Makefile
gramps/cli/plug/Makefile
gramps/const.py
gramps/data/Makefile
gramps/DateHandler/Makefile
gramps/docgen/Makefile
gramps/Filters/Makefile
gramps/Filters/Rules/Citation/Makefile
gramps/Filters/Rules/Event/Makefile
gramps/Filters/Rules/Family/Makefile
gramps/Filters/Rules/Makefile
gramps/Filters/Rules/MediaObject/Makefile
gramps/Filters/Rules/Note/Makefile
gramps/Filters/Rules/Person/Makefile
gramps/Filters/Rules/Place/Makefile
gramps/Filters/Rules/Repository/Makefile
gramps/Filters/Rules/Source/Makefile
gramps/Filters/SideBar/Makefile
gramps/gen/db/Makefile
gramps/gen/display/Makefile
gramps/gen/lib/Makefile
gramps/gen/Makefile
gramps/gen/mime/Makefile
gramps/gen/plug/docbackend/Makefile
gramps/gen/plug/docgen/Makefile
gramps/gen/plug/Makefile
gramps/gen/plug/menu/Makefile
gramps/gen/plug/report/Makefile
gramps/gen/proxy/Makefile
gramps/gen/utils/Makefile
gramps/glade/Makefile
gramps/GrampsLocale/Makefile
gramps/GrampsLogger/Makefile
gramps/gui/editors/displaytabs/Makefile
gramps/gui/editors/Makefile
gramps/gui/Makefile
gramps/gui/plug/Makefile
gramps/gui/plug/report/Makefile
gramps/gui/selectors/Makefile
gramps/gui/views/Makefile
gramps/gui/views/treemodels/Makefile
gramps/gui/widgets/Makefile
gramps/images/16x16/Makefile
gramps/images/22x22/Makefile
gramps/images/48x48/Makefile
gramps/images/Makefile
gramps/images/scalable/Makefile
gramps/Makefile
gramps/Merge/Makefile
gramps/plugins/docgen/Makefile
gramps/plugins/drawreport/Makefile
gramps/plugins/export/Makefile
gramps/plugins/gramplet/Makefile
gramps/plugins/graph/Makefile
gramps/plugins/import/Makefile
gramps/plugins/lib/Makefile
gramps/plugins/lib/maps/Makefile
gramps/plugins/Makefile
gramps/plugins/mapservices/Makefile
gramps/plugins/quickview/Makefile
gramps/plugins/rel/Makefile
gramps/plugins/sidebar/Makefile
gramps/plugins/textreport/Makefile
gramps/plugins/tool/Makefile
gramps/plugins/view/Makefile
gramps/plugins/webreport/Makefile
gramps/plugins/webstuff/css/Makefile
gramps/plugins/webstuff/images/Makefile
gramps/plugins/webstuff/js/Makefile
gramps/plugins/webstuff/Makefile
gramps/Simple/Makefile
m4/Makefile
Makefile
po/Makefile.in
])

AC_OUTPUT
