[files]
[metadata]
name = gramps
version = 3.5.0
author = Donald Allingham
maintainer = Gramps Development Team
package_data =
    gramps = *.py
             DateHandler/*.py
             docgen/*.py
             Filters/*.py
             Filters/*/*.py
             Filters/Rules/*/*.py
             GrampsLocale/*.py
             GrampsLogger/*.py
             Merge/*.py
             Simple/*.py
    gramps.cli = *.py
                 plug/*.py
    gramps.data = *.txt
                  *.xml
    gramps.gen = *.py
                 db/*.py
                 display/*.py
                 lib/*.py
                 mime/*.py
                 plug/*.py
                 plug/*/*.py
                 proxy/*.py
                 utils/*.py
    gramps.gui = *.py
                 editors/*.py
                 editors/*/*.py
                 plug/*.py
                 plug/*/*.py
                 selectors/*.py
                 views/*.py
                 views/treemodels/*.py
                 widgets/*.py
    gramps.images = */*.png
                    */*.svg
                    *.png
                    *.jpg
                    *.ico
                    *.gif
    gramps.plugins = *.py
                     */*.py
                     lib/*.xml
                     lib/maps/*.py
                     webstuff/css/*.css
                     webstuff/images/*.svg
                     webstuff/images/*.png
                     webstuff/images/*.gif
                     *.glade
                     */*.glade
    gramps.webapp = *.py
                    webstuff/css/*.css
                    webstuff/images/*.svg
                    webstuff/images/*.png
                    webstuff/images/*.gif
                    grampsdb/fixtures/initial_data.json
                    */*.py
                    sqlite.db
                    grampsdb/*.py
                    fixtures/initial_data.json
                    templatetags/*py
    gramps/glade = *.glade
                   glade/catalog/*.py
                   catalog/*.xml

resources =
