[metadata]
name = Gramps-Connect
version = 3.5.0
summary = Gramps-Connect is a collaborative Web-based family tree software.
Home-page = http://gramps-connect.org
download-url = http://gramps-project.org/download/
author = Doug S. Blank
author-email = doug.blank@gmail.com
license = GPL v2 or greater
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Plugins
    Environment :: Web Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: GTK
    Framework :: Django
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: Bulgarian
    Natural Language :: Catalan
    Natural Language :: Chinese (Simplified)
    Natural Language :: Croatian
    Natural Language :: Czech
    Natural Language :: Danish
    Natural Language :: Dutch
    Natural Language :: English
    Natural Language :: Esperanto
    Natural Language :: Finnish
    Natural Language :: French
    Natural Language :: German
    Natural Language :: Hebrew
    Natural Language :: Hungarian
    Natural Language :: Italian
    Natural Language :: Japanese
    Natural Language :: Norwegian
    Natural Language :: Polish
    Natural Language :: Portuguese (Brazilian)
    Natural Language :: Portuguese
    Natural Language :: Russian
    Natural Language :: Slovak
    Natural Language :: Slovenian
    Natural Language :: Spanish
    Natural Language :: Swedish
    Natural Language :: Ukranian
    Natural Language :: Vietnamese
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Other OS
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Desktop Environment :: Gnome
    Topic :: Education
    Topic :: Multimedia
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Sociology :: Genealogy
platforms =
    FreeBSD
    Linux
    MacOS
    Windows
keywords =
    Ancestry
    Birth
    Collaboration
    Death
    Family
    Family-tree
    GEDCOM
    Genealogy
    Marriage
    Pedigree
requires-Python: >= 2.6.0
requires-dist =
    distutils2
    httpd >= 2.2
    sqlite
    gtk2
    pygtk2 >= 2.0
obsoletes-dist =
    Gramps-Connect < 3.5.0

[files]
packages =
    webapp
    webapp.grampsdb
    webapp.grampsdb.templatetags
extra_files =
    webapp.grampsdb.fixtures/*.*
    webapp.grampsdb.sql/*.*
    data/templates/*.*
    data/templates/registration/*.*
    plugins/webstuff/*.*
    plugins/webstuff/css/*.*
    plugins/webstuff/css/swanky-purse/*.*
    plugins/webstuff/css/swanky-purse/images/*.*
    plugins/webstuff/images/*.*
    plugins/webstuff/javascript/*.*
