# This is the src/images level Makefile for Gramps
# $Id$

SUBDIRS = scalable 16x16 22x22 48x48
pkgdatadir = $(datadir)/@PACKAGE@/images

icon_DATA = gramps.png
icondir= $(datadir)/pixmaps

dist_pkgdata_DATA = \
	bad.png\
	blank.gif\
	crosshairs.png\
	document.png\
	favicon.ico\
        favicon2.ico\
	gppd.png\
        gramps.png\
	gramps-export.png\
	gramps-geo-altmap.png\
	gramps-geo-birth.png\
	gramps-geo-death.png\
	gramps-geo-mainmap.png\
	gramps-geo-marriage.png\
	gramps-import.png\
        gramps-undo-history.png\
        gramps-url.png\
	image-missing.png\
        logo.png\
        ped24.ico\
        somerights20.gif\
        splash.jpg\
	stock_link.png\
	stock_new_html.png\
	stock_notes.png\
	Web_Gender_Female.png\
	Web_Gender_Male.png\
	Web_Mainz_Bkgd.png\
	Web_Mainz_Header.png\
	Web_Mainz_MidLight.png\
	Web_Mainz_Mid.png

EXTRA_DIST = gramps.svg \
	gramps-geo-altmap.svg\
	gramps-geo-birth.svg\
	gramps-geo-death.svg\
	gramps-geo-mainmap.svg\
	gramps-geo-marriage.svg
