# This is the src/plugins/webstuff level Makefile for Gramps
# We could use GNU make's ':=' syntax for nice wildcard use,
# but that is not necessarily portable.
# If not using GNU make, then list all .py files individually

# $Id$

DATAFILES = \
	jquery-ui-1.7.2.custom.min.js \
	jquery-1.7.1.min.js \
	jquery-1.7.1.js


pkgdatadir = $(datadir)/@PACKAGE@/data/web/javascript

dist_pkgdata_DATA = $(DATAFILES)
